--- a/templates/homeUser.html
+++ b/templates/homeUser.html
@@ -38,7 +38,7 @@
         }
         .container {
             display: flex;
-            flex-grow: 1;
+            flex-grow: 1; /* Заполняет оставшееся пространство */
         }
         .notes-list {
             width: 200px; /* Ширина списка заметок */
@@ -51,27 +51,34 @@
             margin-bottom: 10px;
             border-radius: 5px;
             border: none;
-            background-color: #f0f0f0;
             cursor: pointer;
-        }
-        .notes-list button:hover {
-            background-color: #e0e0e0;
         }
         .main-content {
             flex-grow: 1; /* Заполняет оставшееся пространство */
             display: flex;
-            justify-content: center; /* Центрирование содержимого */
-            align-items: center; /* Вертикальное центрирование */
+            flex-direction: column; /* Вертикальное расположение */
+            padding: 10px; /* Отступы */
         }
-        .main-content p {
-            font-size: 18px; /* Размер текста */
+        .main-content textarea {
+            flex-grow: 1; /* Занимает оставшееся пространство */
+        }
+        .create-note-modal {
+            display: none; /* Скрыто по умолчанию */
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
     </style>
 </head>
 <body>
 <header>
     <div>
-        <button onclick="createNote()">Создать заметку</button>
+        <button onclick="showCreateNoteModal()">Создать заметку</button>
         <button onclick="location.href='/help'">Справка</button>
     </div>
     <div>
@@ -90,6 +97,18 @@
         <p>Выберите заметку или создайте ее нажав на кнопку "Создать заметку"</p>
     </div>
 </div>
+
+<!-- Модальное окно для создания заметки -->
+<div class="create-note-modal" id="createNoteModal">
+    <h3>Создать новую заметку</h3>
+    <label for="noteTitleInput">Название:</label><br/>
+    <input type="text" id="noteTitleInput" placeholder="Введите название заметки"><br/>
+    <label for="noteColorInput">Цвет:</label><br/>
+    <input type="color" id="noteColorInput"><br/>
+    <button onclick="createNote()">Создать</button>
+    <button onclick="hideCreateNoteModal()">Отмена</button>
+</div>
+
 
 <script>
     function openNote(noteID) {
@@ -119,7 +138,7 @@
 
         const note = { title, content: '', color };
 
-        fetch('/notes', {
+        fetch('/notes/new', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
