поправил ошибку оттображения списка заметок при создании новой заметки
при добавлении новой заметки пропадали все остальные заметики, заметка добавлялась наверх списка

--- a/templates/homeUser.html
+++ b/templates/homeUser.html
@@ -260,12 +260,12 @@
     }
 
     // Загрузка существующих заметок при загрузке страницы (если необходимо)
-    // fetch('/notes')
-    //     .then(response => response.json())
-    //     .then(data => {
-    //         notes = data;
-    //         displayNotes();
-    //     });
+    fetch('/notes')
+        .then(response => response.json())
+        .then(data => {
+            notes = data;
+            displayNotes();
+        });
 </script>
 
 </body>
