feat: создан обработчик открытия заметок в поле для заметок

--- a/templates/homeUser.html
+++ b/templates/homeUser.html
@@ -215,7 +215,9 @@
 
     // Функция для открытия выбранной заметки
     function openNote(noteId) {
-        fetch(`/notes/${noteId}`)
+        fetch(`/notes/${noteId}`, {
+            method: 'GET',
+        })
             .then(response => {
                 // Проверяем статус ответа
                 if (!response.ok) {
