--- a/templates/homeUser.html
+++ b/templates/homeUser.html
@@ -237,15 +237,15 @@
 
     // Функция для сохранения текущей заметки
     function saveNote() {
-        const title = document.getElementById('noteTitle').innerText;
+
         const content = document.getElementById('noteContent').value;
 
         if (currentNoteId) {
             // Обновление существующей заметки
             fetch(`/notes/${currentNoteId}`, {
-                method: 'PUT',
+                method: 'PATCH',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({ title, content })
+                body: JSON.stringify({ content })
             })
                 .then(response => response.json())
                 .then(data => {
