--- a/templates/test.html
+++ b/templates/test.html
@@ -40,12 +40,12 @@
             display: flex;
             flex-grow: 1; /* Заполняет оставшееся пространство */
         }
-        .notes-list {
+        .right-panel {
             width: 200px; /* Ширина списка заметок */
             border-right: 1px solid #ccc; /* Разделитель */
             padding: 10px;
         }
-        .notes-list button {
+        .right-panel button {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
