style: в коментарии добавлена информации о том, какая функция будет обрабатывать запрос

--- a/templates/homeUser.html
+++ b/templates/homeUser.html
@@ -277,7 +277,7 @@
         document.getElementById('noteContent').value = '';
     }
 
-    // Загрузка существующих заметок при загрузке страницы (если необходимо), передаем метод, благодаря которому обращаемся к нужному оброботчику
+    // Загрузка существующих заметок при загрузке страницы (если необходимо), передаем метод, благодаря которому обращаемся к нужному оброботчику (GetAllNotes)
     fetch('/notes', {
         method: 'GET',
     })
